--- a/public/css/main.css
+++ b/public/css/main.css
@@ -108,6 +108,12 @@ label{
   margin-left: auto;
   margin-right: auto;
 }
+.myEventResults{
+  border-radius: 5px;
+  background-color: white;
+  opacity: 0.9;
+  width: 700px;
+}
 ::-webkit-input-placeholder {
    color: #283593;
    font-weight: bold;
