--- a/public/partials/createEvent.html
+++ b/public/partials/createEvent.html
@@ -27,7 +27,7 @@
              <div ng-model="choice.name" class="input-field col s6">
                 <i class="material-icons prefix">account_circle</i>
                 <input ng-model="item.name" id="icon_prefix" type="text" class="validate">
-                <label  for="icon_prefix">First Name</label>
+                <label  for="icon_prefix">Name</label>
              </div>
              <div class="input-field col s6">
                <i class="material-icons prefix">phone</i>
@@ -40,7 +40,7 @@
            </div>
        </div>
        <div class="row">
-         <button type="button" class=" btn-block col s2 offset-s5" ng-click="addfield()">Add field</button>
+         <button type="button" class=" btn-block col s2 offset-s5" ng-click="addfield()">Add Friend!</button>
        </div>
        <button ng-click="goToEvent()" type="submit" class="btn btn-block ">submit</button>
       </form>
