--- a/public/partials/createEvent.html
+++ b/public/partials/createEvent.html
@@ -17,7 +17,7 @@
     </form>
     <!-- shows after event is created -->
     <div ng-show="newEvent.id">
-      <h3 class="newEventHeader">Invite friends with this url!~~---</h3>
+      <h3 class="newEventHeader">Invite friends with this url!</h3>
       <div class="col s6 offset-s3"><span class='event-url'>{{urlPath}}</span></div>
       <br>
       <h3 class="newEventHeader">Invite through text message!</h3>
