--- a/public/partials/send.html
+++ b/public/partials/send.html
@@ -2,11 +2,11 @@
   <div class="row">
     <h3 class="send">Want to eat with your friends? Send them a text!</h3>
     <form ng-submit="sms()" class="sendForm">
-      <input type="text" name="name" value="" placeholder="+1-123-456-7891" ng-model="number.phone1">
+      <input type="text" name="name" value="" placeholder="11234567891" ng-model="number.phone1">
       <h5>{{number.phone1}}</h5>
-      <input type="text" name="name" value="" placeholder="+1-123-456-7891" ng-model="number.phone2">
+      <input type="text" name="name" value="" placeholder="11234567891" ng-model="number.phone2">
       <h5>{{number.phone2}}</h5>
-      <input type="text" name="name" value="" placeholder="+1-123-456-7891" ng-model="number.phone3">
+      <input type="text" name="name" value="" placeholder="11234567891" ng-model="number.phone3">
       <h5>{{number.phone3}}</h5>
       <button class="btn btn-default" type="submit" name="button">Submit</button>
     </form>
