--- a/public/partials/createEvent.html
+++ b/public/partials/createEvent.html
@@ -8,7 +8,7 @@
   </div>
   <br>
   <div class="createEventForm">
-    <form ng-hide="newEvent.id" ng-submit="createEvent()">
+    <form  ng-submit="createEvent()">
       <h3 class="newEventHeader"> Create an Event</h3>
       <input type="text" placeholder="Name of your event" ng-model="newEvent.name">
       <input type="text" placeholder="Type of Food (optional)" ng-model="newEvent.term">
@@ -16,7 +16,7 @@
       <button type="submit" name="button">submit</button>
     </form>
     <!-- shows after event is created -->
-    <div ng-show="newEvent.id">
+    <div >
       <h3 class="newEventHeader">Invite friends with this url!~~---</h3>
       <div class="col s6 offset-s3"><span class='event-url'>{{urlPath}}</span></div>
       <br>
