--- a/public/partials/createEvent.html
+++ b/public/partials/createEvent.html
@@ -40,12 +40,7 @@
              </div>
            </div>
        </div>
-
-       <div class="row">
-         <button type="button" class=" btn-block col s2 offset-s5" ng-click="addfield()">Add Friend!</button>
-       </div>
-       <button ng-click="goToEvent()" type="submit" class="btn btn-block ">Invite Friends!</button>
-
+       <a href="/send"><button ng-click="goToEvent()" type="submit" class="btn btn-block ">Invite Friends!</button></a>
       </form>
     </div>
   </div>
