--- a/public/partials/createEvent.html
+++ b/public/partials/createEvent.html
@@ -19,7 +19,7 @@
 
     <div ng-show="newEvent.id">
       <h3 class="newEventHeader">Invite friends with this url!</h3>
-      <div class="col s6 offset-s3"><span class='event-url'>{{urlPath}}</span></div>
+      <div class="col s6 offset-s3"><span class='event-url'><a href="/eventform/{{newEvent.eventUrl}}">{{urlPath}} </a></span></div>
       <br>
       <h3 class="newEventHeader">Invite through text message!</h3>
       <form  ng-submit="createAttendee()">
