--- a/public/partials/eventForm.html
+++ b/public/partials/eventForm.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col s12">
+    <div class="col s12" ng-hide="submitted">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
           <span class="card-title">{{event.name}}</span>
@@ -24,5 +24,19 @@
         </div>
       </div>
     </div>
+
+    <div class="col s12" ng-show="submitted">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">Thank you for your submission!</span>
+          <div class="card-action">
+            <a href="/register" ng-hide="authenticated">Register for FwF!</a>
+            <a href="/login" ng-hide="authenticated">Login</a>
+            <a href="/myaccount" ng-show="authenticated">My Account</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
