--- a/public/partials/send.html
+++ b/public/partials/send.html
@@ -1,14 +1,27 @@
 <div class="container">
   <div class="row">
-    <h3 class="send">Want to eat with your friends? Send them a text!</h3>
-    <form ng-submit="sms()" class="sendForm">
-      <input type="text" name="name" value="" placeholder="11234567891" ng-model="number.phone1">
-      <h5>{{number.phone1}}</h5>
-      <input type="text" name="name" value="" placeholder="11234567891" ng-model="number.phone2">
-      <h5>{{number.phone2}}</h5>
-      <input type="text" name="name" value="" placeholder="11234567891" ng-model="number.phone3">
-      <h5>{{number.phone3}}</h5>
-      <button class="btn btn-default" type="submit" name="button">Submit</button>
-    </form>
+    <div ng-hide="submitted">
+      <h3 class="send">Want to eat with your friends? Send them a text!</h3>
+      <form ng-submit="sms()" class="sendForm">
+        <input type="text" name="name" value="" placeholder="11234567891" ng-model="number.phone1">
+        <h5>{{number.phone1}}</h5>
+        <input type="text" name="name" value="" placeholder="11234567891" ng-model="number.phone2">
+        <h5>{{number.phone2}}</h5>
+        <input type="text" name="name" value="" placeholder="11234567891" ng-model="number.phone3">
+        <h5>{{number.phone3}}</h5>
+        <button class="btn btn-default" type="submit" name="button">Submit</button>
+      </form>
+    </div>
+    <div class="col s12" ng-show="submitted">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">Your friends should be recieving a message soon, thanks!</span>
+          <div class="card-action">
+            <a href="/myaccount">My Account</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
   </div>
 </div>
