cleaned up old code and styled a btn

--- a/public/partials/createEvent.html
+++ b/public/partials/createEvent.html
@@ -13,7 +13,7 @@
       <input type="text" placeholder="Name of your event" ng-model="newEvent.name">
       <input type="text" placeholder="Type of Food (optional)" ng-model="newEvent.term">
       <input type="text" placeholder="Location" ng-model="newEvent.location">
-      <button type="submit" name="button">submit</button>
+      <button type="submit" name="button" class="btn">submit</button>
     </form>
     <!-- shows after event is created -->
 
