changed myevent tab to search events cause its a search not the users events

--- a/public/partials/event.html
+++ b/public/partials/event.html
@@ -1,6 +1,6 @@
   <div class="row">
     <form ng-submit="findMyEvents()" class="findMyEvents col s12">
-      <h1 class="form-header">My Events</h1>
+      <h1 class="form-header">Search Events</h1>
       <br>
       <button class="myEventSearchBtn btn btn-block" ng-click='ShowAllEvents()' type="button">Show All</button>
       <div class="form-group ">
