--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="newEvent">Create Event</a></li>
         <li><a href="/map">Map</a></li>
-        <li><a href="event">My Events</a></li>
+        <li><a href="event">Search Events</a></li>
         <li><a href="/myaccount">Account</a></li>
         <li><a href="logout" target="_self">Logout</a></li>
       </ul>
