my events page working and showing results from logged in user

--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -18,7 +18,7 @@
         <br>
         <br>
         <a href="/newEvent" class="waves-effect waves-light btn orange darken-2">Create Event</a>
-        <a href="/event" class="waves-effect waves-light btn orange darken-2">My Events</a>
+        <a href="/myEvents" class="waves-effect waves-light btn orange darken-2">My Events</a>
       </div>
     </div>
   </div>
