--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,7 @@
         <li><a href="/map">Map</a></li>
         <li><a href="event">Search Events</a></li>
         <li><a href="/myaccount">Account</a></li>
+        <li><a href="/myEvents">My Events</a></li>
         <li><a href="logout" target="_self">Logout</a></li>
       </ul>
     </div>
