working send results btn in the new my events form

--- a/public/partials/myaccount.html
+++ b/public/partials/myaccount.html
@@ -12,7 +12,7 @@
     <p>Here is some more information about your activity on the app!</p>
     <ul>
       <li>Date Joined: {{users.createdAt | date: longDate}}</li>
-      <li>Events Created:<a href="/event" class="waves-effect waves-light btn indigo darken-2 myEventBtn">My Events</a></li>
+      <li>Events Created:<a href="/myEvents" class="waves-effect waves-light btn indigo darken-2 myEventBtn">My Events</a></li>
     </ul>
   </div>
 </div>
