--- a/public/partials/myEvents.html
+++ b/public/partials/myEvents.html
@@ -11,8 +11,8 @@
   <div ng-repeat="event in events">
     <div class="col s12 m6">
       <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-          <span class="card-title center-align">{{event.name}}</span>
+        <div class="card-content white-text center-align">
+          <span class="card-title">{{event.name}}</span>
           <div class="row">
             <div class="col s8">
               <p>PLACE</p>
@@ -27,6 +27,7 @@
               </div>
             </div>
           </div>
+          <button type="button" class="btn" ng-click="sendEvent(event)">End Polling and Send Results</button>
         </div>
       </div>
     </div>
