--- a/public/partials/myEvents.html
+++ b/public/partials/myEvents.html
@@ -12,7 +12,8 @@
     <div class="col s12 m6">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text center-align">
-          <span class="card-title">{{event.name}}</span>
+          <span class="card-title">{{event.name}}</span><br>
+          <a target="blank" href="http://getfoodwithfriends.herokuapp.com/eventform/{{event.eventUrl}}">Event Survey Here!</a>
           <div class="row">
             <div class="col s8">
               <p>PLACE</p>
